--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.0",
     "@google/generative-ai": "^0.11.1",
+    "@tinymce/tinymce-angular": "^8.0.0",
     "express": "^4.18.2",
     "flowbite": "^2.3.0",
     "ngx-cookie-service": "^17.1.0",
     "rxjs": "~7.8.0",
+    "tinymce": "^7.1.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
