--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.0",
     "@google/generative-ai": "^0.11.1",
+    "@nguniversal/express-engine": "^7.0.2",
     "@tinymce/tinymce-angular": "^8.0.0",
     "apexcharts": "^3.49.1",
     "dayjs": "^1.11.11",
     "express": "^4.18.2",
     "flowbite": "^2.3.0",
+    "mammoth": "^1.8.0",
     "ngx-cookie-service": "^17.1.0",
     "rxjs": "~7.8.0",
     "tinymce": "^7.1.1",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -43,6 +46,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@types/xlsx": "^0.0.36",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
