--- a/angular.json
+++ b/angular.json
@@ -94,8 +94,11 @@
             ],
             "styles": [
               "src/styles.css"
+              
             ],
-            "scripts": []
+            "scripts": [
+              
+            ]
           }
         }
       }
