--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "dayjs": "^1.11.11",
     "express": "^4.18.2",
     "flowbite": "^2.3.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "mammoth": "^1.8.0",
     "ngx-cookie-service": "^17.1.0",
+    "puppeteer": "^22.12.1",
     "rxjs": "~7.8.0",
     "tinymce": "^7.1.1",
     "tslib": "^2.3.0",
