--- a/angular.json
+++ b/angular.json
@@ -93,8 +93,8 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
-              
             ],
             "scripts": [
               
