--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "@nguniversal/express-engine": "^7.0.2",
     "@tinymce/tinymce-angular": "^8.0.0",
     "apexcharts": "^3.49.1",
+    "chart.js": "^4.4.3",
     "chartjs": "^0.3.24",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "express": "^4.18.2",
     "flowbite": "^2.3.0",
+    "frontend": "file:",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "mammoth": "^1.8.0",
