--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "mammoth": "^1.8.0",
+    "moment": "^2.30.1",
     "ng2-charts": "^6.0.1",
     "ngx-cookie-service": "^17.1.0",
     "puppeteer": "^22.12.1",
