--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.0",
+    "@ckeditor/ckeditor5-angular": "^8.0.0",
     "@google/generative-ai": "^0.11.1",
     "@nguniversal/express-engine": "^7.0.2",
     "@tinymce/tinymce-angular": "^8.0.0",
